--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/niklassletteland/coffee"
   },
   "dependencies": {
     "express": "~4.0.0"
