--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "url": "https://github.com/niklassletteland/coffee"
   },
   "dependencies": {
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "mocha": "~1.18.2",
+    "chai": "~1.9.1",
+    "blanket": "~1.1.6",
+    "coveralls": "~2.10.0",
+    "mocha-lcov-reporter": "0.0.1"
+  },
+  "config": {
+    "blanket": {
+      "pattern": "server.js"
+    }
   }
 }
