configured npm test to run mocha

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "blanket": {
       "pattern": "server.js"
     }
+  },
+  "scripts": {
+    "test": "mocha -R spec \n mocha --require blanket -R html-cov > coverage.html"
   }
 }
