--- a/package.json
+++ b/package.json
@@ -8,19 +8,6 @@
     "url": "https://github.com/niklassletteland/coffee"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "mocha": "~1.18.2",
-    "chai": "~1.9.1",
-    "blanket": "~1.1.6",
-    "coveralls": "~2.10.0",
-    "mocha-lcov-reporter": "0.0.1"
-  },
-  "config": {
-    "blanket": {
-      "pattern": "server.js"
-    }
-  },
-  "scripts": {
-    "test": "mocha -R spec \n mocha --require blanket -R html-cov > coverage.html"
+    "express": "~4.0.0"
   }
 }
