--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
     "url": "https://github.com/niklassletteland/coffee"
   },
   "dependencies": {
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "karma": "~0.12.12"
+  },
+  "scripts": {
+    "test": "karma start test/karma.conf.js"
+  },
+  "devDependencies": {
+    "karma-chrome-launcher": "~0.1.3",
+    "karma-jasmine": "~0.1.5",
+    "karma-phantomjs-launcher": "~0.1.4"
   }
 }
