--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "karma": "~0.12.12"
   },
   "scripts": {
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
+    "test": "karma start test/karma.conf.js --single-run"
   },
   "devDependencies": {
     "karma-chrome-launcher": "~0.1.3",
