--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma-jasmine": "~0.1.5"
   },
   "scripts": {
+    "start":"node server.js",
     "test": "./node_modules/karma/bin/karma start test/karma.conf.js --single-run"
   },
   "devDependencies": {
