--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "url": "https://github.com/niklassletteland/coffee"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "karma": "~0.12.12",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-jasmine": "~0.1.5"
+    "express": "~4.0.0"
   },
   "scripts": {
-    "start":"node server.js",
-    "test": "./node_modules/karma/bin/karma start test/karma.conf.js --single-run"
+    "start": "node server.js",
+    "test": "grunt test"
   },
   "devDependencies": {
     "karma-chrome-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma": "~0.12.12"
+    "karma": "~0.12.12",
+    "grunt": "~0.4.4",
+    "grunt-cli": "~0.1.13",
+    "grunt-karma": "~0.8.3",
+    "load-grunt-tasks": "~0.4.0",
+    "chai": "~1.9.1",
+    "mocha": "~1.18.2",
+    "grunt-mocha": "~0.4.10"
   }
 }
