--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "load-grunt-tasks": "~0.4.0",
     "chai": "~1.9.1",
     "mocha": "~1.18.2",
-    "grunt-mocha": "~0.4.10"
+    "grunt-mocha-test": "~0.10.2"
   }
 }
